--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -190,7 +190,7 @@
           <a href="javascript:void(0)" class="sidebar-back d-lg-none d-block"><i class="fa fa-times"
               aria-hidden="true"></i></a>
           <div class="sidebar-user">
-            <img class="img-60" src="{{ request.user.first_name }}" alt="#" />
+            <img class="img-60" src="{{ request.user.image.url }}" alt="#" />
             <div>
               <h6 class="f-14">{{ request.user.first_name }}</h6>
               <p>{{ request.user.cargo }}.</p>
@@ -207,86 +207,27 @@
             <li>
               <a class="sidebar-header" href="javascript:void(0)">
                 <i data-feather="box"></i>
-                <span>Products</span>
+                <span>Productos</span>
                 <i class="fa fa-angle-right pull-right"></i>
               </a>
 
               <ul class="sidebar-submenu">
-                <li>
-                  <a href="javascript:void(0)">
+                <li> 
+                  <a href="{% url 'pro:producto_list' %}">
                     <i class="fa fa-circle"></i>
-                    <span>Physical</span>
-                    <i class="fa fa-angle-right pull-right"></i>
+                    <span>Productos</span>
                   </a>
-
-                  <ul class="sidebar-submenu">
-                    <li>
-                      <a href="category.html">
-                        <i class="fa fa-circle"></i>Category
-                      </a>
-                    </li>
-
-                    <li>
-                      <a href="category-sub.html">
-                        <i class="fa fa-circle"></i>Sub Category</a>
-                    </li>
-
-                    <li>
-                      <a href="product-list.html">
-                        <i class="fa fa-circle"></i>Product List</a>
-                    </li>
-
-                    <li>
-                      <a href="product-detail.html">
-                        <i class="fa fa-circle"></i>Product Detail</a>
-                    </li>
-
-                    <li>
-                      <a href="add-product.html">
-                        <i class="fa fa-circle"></i>Add Product
-                      </a>
-                    </li>
-                  </ul>
                 </li>
-
-                <li>
-                  <a href="javascript:void(0)">
+                <li> 
+                  <a href="{% url 'pro:categoria_list' %}">
                     <i class="fa fa-circle"></i>
-                    <span>Digital</span>
-                    <i class="fa fa-angle-right pull-right"></i>
+                    <span>Categorías</span>
                   </a>
-
-                  <ul class="sidebar-submenu">
-                    <li>
-                      <a href="category-digital.html">
-                        <i class="fa fa-circle"></i>Category
-                      </a>
-                    </li>
-
-                    <li>
-                      <a href="category-digitalsub.html">
-                        <i class="fa fa-circle"></i>Sub Category
-                      </a>
-                    </li>
-
-                    <li>
-                      <a href="product-listdigital.html">
-                        <i class="fa fa-circle"></i>Product List
-                      </a>
-                    </li>
-
-                    <li>
-                      <a href="add-digital-product.html">
-                        <i class="fa fa-circle"></i>Add Product
-                      </a>
-                    </li>
-                  </ul>
                 </li>
-
-                <li>
-                  <a href="product-review.html">
+                <li> 
+                  <a href="{% url 'pro:marca_list' %}">
                     <i class="fa fa-circle"></i>
-                    <span>product Review</span>
+                    <span>Marcas</span>
                   </a>
                 </li>
               </ul>
@@ -350,21 +291,21 @@
               </a>
             </li>
 
-            <li>
+            <li> 
               <a class="sidebar-header" href="javascript:void(0)">
                 <i data-feather="user-plus"></i>
-                <span>Users</span>
+                <span>Usuarios</span>
                 <i class="fa fa-angle-right pull-right"></i>
               </a>
               <ul class="sidebar-submenu">
                 <li>
-                  <a href="user-list.html">
-                    <i class="fa fa-circle"></i>User List
+                  <a href="{% url 'usr:user_list' %}">
+                    <i class="fa fa-circle"></i>Usuarios
                   </a>
                 </li>
                 <li>
-                  <a href="create-user.html">
-                    <i class="fa fa-circle"></i>Create User
+                  <a href="{% url 'usr:cargo_list' %}">
+                    <i class="fa fa-circle"></i>Cargos
                   </a>
                 </li>
               </ul>
@@ -454,9 +395,6 @@
 
   <!--sparkline chart js-->
   <script src="{% static 'base/assets/js/chart/sparkline/sparkline.js' %}"></script>
-
-  <!--Customizer admin-->
-  <script src="{% static 'base/assets/js/admin-customizer.js' %}"></script>
 
   <!--dashboard custom js-->
   <script src="{% static 'base/assets/js/dashboard/default.js' %}"></script>
