--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -159,8 +159,14 @@
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:void(0)">
-                    <i data-feather="log-out"></i>Logout
+                  <!-- Formulario de logout oculto -->
+                  <form id="logout-form" method="post" action="{% url 'logout' %}" style="display: none;">
+                    {% csrf_token %}
+                  </form>
+                  
+                  <!-- Enlace que dispara el envío del formulario -->
+                  <a href="#" onclick="document.getElementById('logout-form').submit(); return false;">
+                    <i data-feather="log-out"></i> Cerrar Sesión
                   </a>
                 </li>
               </ul>
