--- a/bas/templates/login.html
+++ b/bas/templates/login.html
@@ -4,14 +4,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        background-color: #f0f0f0;
+      }
+
+      .video-fondo {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: brightness(0.5);
+      }
+
+      .contenedor-login {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: rgb(161 251 238 / 33%);
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+
+      .contenedor-login h2 {
+        color: #ffffffd4;
+        margin-bottom: 20px;
+      }
+
+      .contenedor-login input {
+        width: 96%;
+        padding: 10px;
+        margin-bottom: 20px;
+        border: none;
+        border-radius: 5px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      }
+
+      .contenedor-login button {
+        width: 100%;
+        padding: 10px;
+        background-color: #40e0d0;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      .contenedor-login button:hover {
+        background-color: #31b3a6;
+      }
+
+      .errorlist {
+        color: red;
+        margin-bottom: 10px;
+        list-style-type: none;
+        padding-left: 0;
+      }
+    </style>
   </head>
 
   <body>
-    <h2>Iniciar Sesión</h2>
-    <form method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit">Ingresar</button>
-    </form>
+    <video class="video-fondo" autoplay loop muted>
+      <source src="https://cdn.pixabay.com/video/2023/09/29/182908-869766918_large.mp4" type="video/mp4">
+    </video>
+    <div class="contenedor-login">
+      <form method="post">
+        {% csrf_token %}
+        <h2>Inicia sesión</h2>
+        <input type="text" name="username" placeholder="Nombre de usuario" autofocus="" autocapitalize="none"
+          autocomplete="username" maxlength="150" required id="id_username">
+        {{ form.username.errors }}
+        <input type="password" name="password" autocomplete="current-password" required id="id_password"
+          placeholder="Contraseña">
+        {{ form.password.errors }}
+        <button type="submit">Iniciar sesión</button>
+      </form>
+    </div>
   </body>
 </html>
