--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -150,7 +150,7 @@
             <li>
               <a class="sidebar-header" href="javascript:void(0)">
                 <i data-feather="dollar-sign"></i>
-                <span>Ordenes</span>
+                <span>Ventas</span>
                 <i class="fa fa-angle-right pull-right"></i>
               </a>
 
