--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -257,6 +257,26 @@
               </ul>
             </li>
 
+            <li> 
+              <a class="sidebar-header" href="javascript:void(0)">
+                <i data-feather="user-plus"></i>
+                <span>Web</span>
+                <i class="fa fa-angle-right pull-right"></i>
+              </a>
+              <ul class="sidebar-submenu">
+                <li>
+                  <a href="{% url 'usr:user_list' %}">
+                    <i class="fa fa-circle"></i>Usuarios
+                  </a>
+                </li>
+                <li>
+                  <a href="{% url 'usr:cargo_list' %}">
+                    <i class="fa fa-circle"></i>Menu
+                  </a>
+                </li>
+              </ul>
+            </li>
+
             <li>
               <a class="sidebar-header" href="{% url 'bas:empresa_edit' %}"><i
                   data-feather="settings"></i><span>Empresa</span></a>
