--- a/web/templates/inicio.html
+++ b/web/templates/inicio.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="keywords" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Koisland Store</title>
+  <title>{{ emp.nombre }}</title>
   <!-- styles-->
   <link rel="stylesheet" href="{% static 'web/css/styles.min.css' %}" /> 
   <!-- web-font loader-->
@@ -324,8 +324,7 @@
           <div class="col-12 d-flex align-items-center justify-content-between">
             <div class="header__lower-inner">
               <div class="header__phones">
-                Phone: <a href="tel:+31859644725">+31 85 964 47 25</a>
-                <a href="tel:+31657926311">+31 65 792 63 11</a>
+                Phone: <a href="tel:{{ emp.telefono }}">{{ emp.telefono }}</a>
               </div>
             </div>
             <div class="header__lower-inner">
@@ -352,12 +351,9 @@
               <!-- lang select start-->
               <ul class="lang-select">
                 <li class="lang-select__item lang-select__item--active">
-                  <span>English</span>
+                  <span>Español</span>
                   <ul class="lang-select__sub-list">
-                    <li><a href="#">French</a></li>
-                    <li><a href="#">Spanish</a></li>
-                    <li><a href="#">Deutsch</a></li>
-                    <li><a href="#">Russian</a></li>
+                    <li><a href="#">Ingles</a></li>
                   </ul>
                 </li>
               </ul>
@@ -369,188 +365,17 @@
       <div class="header__top">
         <div class="row align-items-center">
           <div class="col-8 col-lg-3">
-            <a class="logo" href="index.html"><img class="logo--white logo__img" src="{% static 'web/img/logo_aquarium.png' %}"
-                alt="logo" /><img class="logo--dark logo__img" src="{% static 'web/img/logo_aquarium_black.png' %}" alt="logo" /></a>
+            <a class="logo" href="index.html"><img class="logo--white logo__img" src="{{ emp.logo.url }}"
+                alt="logo" /><img class="logo--dark logo__img" src="{{ emp.logo.url }}" alt="logo" /></a>
           </div>
           <div class="col-4 col-lg-9 d-flex justify-content-end align-items-center">
             <!-- main menu start-->
             <ul class="main-menu">
-              <li class="main-menu__item main-menu__item--has-child main-menu__item--active">
-                <a class="main-menu__link" href="javascript:void(0);"><span>Home</span></a>
-                <!-- sub menu start-->
-                <ul class="main-menu__sub-list">
-                  <li>
-                    <a href="index.html"><span>Home Zoo</span></a>
-                  </li>
-                  <li class="item--active">
-                    <a href="front_2.html"> <span>Home Aquarium</span></a>
-                  </li>
-                  <li>
-                    <a href="front_3.html"><span>Home Terrarium</span></a>
-                  </li>
-                  <li>
-                    <a href="front_4.html"><span>Home Animal Protections</span></a>
-                  </li>
-                  <li>
-                    <a href="front_5.html"><span>Home Safari</span></a>
-                  </li>
-                  <li>
-                    <a href="front_6.html"><span>Home Shop</span></a>
-                  </li>
-                </ul>
-                <!-- sub menu end-->
-              </li>
-              <li class="main-menu__item main-menu__item--has-child">
-                <a class="main-menu__link" href="javascript:void(0);"><span>Pages</span></a>
-                <!-- sub menu start-->
-                <ul class="main-menu__sub-list sub-list--style-2">
-                  <li>
-                    <a href="about.html"><span>About</span></a>
-                  </li>
-                  <li>
-                    <a href="services.html"><span>Services</span></a>
-                  </li>
-                  <li>
-                    <a href="blog-details.html"><span>Blog Details</span></a>
-                  </li>
-                  <li>
-                    <a href="gallery.html"><span>Gallery</span></a>
-                  </li>
-                  <li>
-                    <a href="gallery_2.html"><span>Gallery v.2</span></a>
-                  </li>
-                  <li>
-                    <a href="calendar.html"><span>Calendar</span></a>
-                  </li>
-                  <li>
-                    <a href="membership.html"><span>Membership</span></a>
-                  </li>
-                  <li>
-                    <a href="events.html"><span>Events</span></a>
-                  </li>
-                  <li>
-                    <a href="event-details.html"><span>Event Details</span></a>
-                  </li>
-                  <li>
-                    <a href="tickets.html"><span>Tickets</span></a>
-                  </li>
-                  <li>
-                    <a href="foundation.html"><span>Foundation</span></a>
-                  </li>
-                  <li>
-                    <a href="education.html"><span>Education</span></a>
-                  </li>
-                  <li>
-                    <a href="donation.html"><span>Donation</span></a>
-                  </li>
-                  <li>
-                    <a href="donation-details.html"><span>Donation Details</span></a>
-                  </li>
-                  <li>
-                    <a href="animals.html"> <span>Animals</span></a>
-                  </li>
-                  <li>
-                    <a href="animal-details.html">
-                      <span>Animal Details</span></a>
-                  </li>
-                  <li>
-                    <a href="safari-tours.html"> <span>Safari Tours</span></a>
-                  </li>
-                  <li>
-                    <a href="tour-details.html"> <span>Tour Details</span></a>
-                  </li>
-                  <li>
-                    <a href="typography.html"> <span>Typography</span></a>
-                  </li>
-                  <li>
-                    <a href="faq.html"><span>FAQ</span></a>
-                  </li>
-                  <li>
-                    <a href="map.html"><span>Map</span></a>
-                  </li>
-                  <li>
-                    <a href="404.html"><span>404 Page</span></a>
-                  </li>
-                </ul>
-                <!-- sub menu end-->
-              </li>
-              <li class="main-menu__item">
-                <a class="main-menu__link" href="blog.html"><span>Blog</span></a>
-              </li>
-              <li class="main-menu__item main-menu__item--has-child">
-                <a class="main-menu__link" href="javascript:void(0);"><span>Shop</span></a>
-                <!-- sub menu start-->
-                <ul class="main-menu__sub-list">
-                  <li>
-                    <a href="shop-catalog.html"><span>Shop Catalog</span></a>
-                  </li>
-                  <li>
-                    <a href="shop-product.html"><span>Shop Product</span></a>
-                  </li>
-                  <li>
-                    <a href="shop-cart.html"><span>Shop Cart</span></a>
-                  </li>
-                  <li>
-                    <a href="shop-checkout.html"><span>Shop Checkout</span></a>
-                  </li>
-                  <li>
-                    <a href="shop-account.html"><span>Shop Account</span></a>
-                  </li>
-                </ul>
-                <!-- sub menu end-->
-              </li>
-              <li class="main-menu__item">
-                <a class="main-menu__link" href="contacts.html"><span>Contacts</span></a>
-              </li>
-              <li class="main-menu__item main-menu__item--has-child">
-                <a class="main-menu__link" href="javascript:void(0);"><span>Elements</span></a>
-                <!-- sub menu start-->
-                <ul class="main-menu__sub-list sub-list--style-2">
-                  <li>
-                    <a href="accordion.html"><span>Accordion</span></a>
-                  </li>
-                  <li>
-                    <a href="charts.html"><span>Charts</span></a>
-                  </li>
-                  <li>
-                    <a href="alerts.html"><span>Alerts</span></a>
-                  </li>
-                  <li>
-                    <a href="counters.html"><span>Counters</span></a>
-                  </li>
-                  <li>
-                    <a href="logos.html"><span>Logos</span></a>
-                  </li>
-                  <li>
-                    <a href="forms.html"><span>Forms</span></a>
-                  </li>
-                  <li>
-                    <a href="tabs.html"><span>Tabs</span></a>
-                  </li>
-                  <li>
-                    <a href="buttons.html"><span>Buttons</span></a>
-                  </li>
-                  <li>
-                    <a href="paginations.html"><span>Paginations</span></a>
-                  </li>
-                  <li>
-                    <a href="team.html"><span>Team</span></a>
-                  </li>
-                  <li>
-                    <a href="breadcrumbs.html"><span>Bread Crumbs</span></a>
-                  </li>
-                  <li>
-                    <a href="icon-list.html"><span>Icon List</span></a>
-                  </li>
-                  <li>
-                    <a href="pricing-tables.html"><span>Pricing Tables</span></a>
-                  </li>
-                  <li>
-                    <a href="testimonials.html"><span>Testimonials</span></a>
-                  </li>
-                </ul>
-                <!-- sub menu end-->
-              </li>
+              {% for i in menus %}
+                <li class="main-menu__item">
+                  <a class="main-menu__link" href="{{i.url}}"><span>{{i.nombre}}</span></a>
+                </li>
+              {% endfor %}
             </ul>
             <!-- main menu end--><a class="header__button" href="#">Tickets</a>
             <!-- menu-trigger start-->
@@ -658,22 +483,17 @@
         <div class="promo-pannel">
           
           <div class="promo-pannel__details">
-            <span class="promo-pannel__subject">Events</span>
+            <span class="promo-pannel__subject">Proyectos</span>
             <div class="row align-items-end">
-              <div class="col-xl-6">
-                <span class="promo-pannel__count color--cyan">01</span>
-                <h6 class="promo-pannel__title color--primary">
-                  <a href="#">Fishes Dancing</a>
-                </h6>
-                <p class="promo-pannel__date">01 Nov 2020</p>
-              </div>
-              <div class="col-xl-6">
-                <span class="promo-pannel__count color--cyan">02</span>
-                <h6 class="promo-pannel__title color--primary">
-                  <a href="#">Aquarium Photosession</a>
-                </h6>
-                <p class="promo-pannel__date">02 Nov 2020</p>
-              </div>
+              {% for p in proyectos %}
+                <div class="col-xl-6">
+                  <span class="promo-pannel__count color--cyan">{{p.id}}</span>
+                  <h6 class="promo-pannel__title color--primary">
+                    <a href="#">{{p.nombre}}</a>
+                  </h6>
+                  <p class="promo-pannel__date">{{p.fecha_inicio}}</p>
+                </div>
+              {% endfor %}
             </div>
           </div>
         </div>
@@ -1554,7 +1374,7 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-4 text-center text-lg-left">
-              <a class="footer__link" href="#"><img src="img/footer-logo.png" alt="logo" /></a>
+              <a class="footer__link" href="#"><img src="{{ emp.logo.url }}" alt="logo" /></a>
             </div>
             <div class="col-lg-4 text-center">
               <div class="footer-privacy">
@@ -1566,13 +1386,12 @@
             <div class="col-lg-4">
               <div class="footer__details text-center text-lg-right">
                 <p>
-                  <strong>Location:</strong>
-                  <span>av. Washington 165, NY CA 54003</span>
+                  <strong>Direccion:</strong>
+                  <span>{{ emp.direccion }}</span>
                 </p>
                 <p>
-                  <strong>Phone:</strong>
-                  <a href="tel:+31859644725">+31 85 964 47 25</a>
-                  <a href="tel:+31859644725">+31 65 792 63 11</a>
+                  <strong>Telefono:</strong>
+                  <a href="tel:+31859644725">{{ emp.telefono }}</a>
                 </p>
               </div>
             </div>
